# MemeChat

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  gradle.properties.example  secrets.properties.example  settings.gradle.kts
.github/workflows/: build-beta.yml  build-release.yml  test.yml
app/: .gitignore  build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/java/fun/walawe/memechat/: CustomTestRunner.kt  ExampleInstrumentedTest.kt
app/src/androidTest/java/fun/walawe/memechat/service/: FakeModelDownloader.kt  ModelDownloadServiceTest.kt  TestModelDownloaderModule.kt
app/src/androidTest/java/fun/walawe/memechat/worker/: FakeModelDownloader.kt  ModelDownloadWorkerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: init.faiss  privacy_policy.md
app/src/main/java/fun/walawe/memechat/: MainActivity.kt  MemeChatApp.kt
app/src/main/java/fun/walawe/memechat/analyzer/: ConnectionSpeedChecker.kt  DeviceCompatibilityChecker.kt  GgufQuantReader.kt
app/src/main/java/fun/walawe/memechat/compat/: DeviceCompatibilityChecker.kt
app/src/main/java/fun/walawe/memechat/data/: ChatEmbedBuilder.kt  ChatMLBuilder.kt  ImageDecoder.kt  ImageManipulation.kt  ImageStore.kt  InferenceRepository.kt  ModelRepository.kt  UserPreferences.kt
app/src/main/java/fun/walawe/memechat/gguf/: GgufQuantReader.kt
app/src/main/java/fun/walawe/memechat/llm/: MemeLMRepository.kt
app/src/main/java/fun/walawe/memechat/model/: AppModels.kt
app/src/main/java/fun/walawe/memechat/presenter/: BaseViewModel.kt  ChatViewModel.kt  DownloadViewModel.kt  OnboardingViewModel.kt  SettingsViewModel.kt
app/src/main/java/fun/walawe/memechat/service/: DownloadNotificationManager.kt  ModelDownloadService.kt
app/src/main/java/fun/walawe/memechat/ui/components/: MarkdownContent.kt
app/src/main/java/fun/walawe/memechat/worker/: ModelDownloadWorker.kt
app/src/main/play/listing/en-US/: full-description.txt
app/src/main/play/releases/: whatsnew-en-US.txt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/fun/walawe/memechat/: ExampleUnitTest.kt
app/src/test/java/fun/walawe/memechat/analyzer/: ConnectionSpeedCheckerTest.kt
app/src/test/java/fun/walawe/memechat/data/: ChatEmbedBuilderTest.kt
bridgelm/: LIB_REF_INFORMATION.md  build.gradle.kts
bridgelm/src/main/cpp/: CMakeLists.txt  logging.h
buildSrc/src/main/kotlin/: Secrets.kt
constant/: build.gradle.kts
constant/src/androidTest/java/fun/walawe/constant/: ExampleInstrumentedTest.kt
constant/src/main/java/fun/walawe/constant/: CommonExtension.kt  ConstantModule.kt  DefaultSpecification.kt  ModelUrlProvider.kt
constant/src/test/java/fun/walawe/constant/: ExampleUnitTest.kt
docs/: PIPELINE.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
local/: RAG.md  build.gradle.kts
local/src/androidTest/java/fun/walawe/local/: ExampleInstrumentedTest.kt
local/src/main/java/fun/walawe/local/: AppDatabase.kt
local/src/main/java/fun/walawe/local/dao/: ChunkDao.kt  ConversationDao.kt  MessageDao.kt
local/src/main/java/fun/walawe/local/data/: AppDatabase.kt  ChunkEntity.kt  ConversationDao.kt  ConversationEntity.kt  MessageDao.kt  MessageEntity.kt  PreprocessSentence.kt
local/src/main/java/fun/walawe/local/di/: DatabaseModule.kt
local/src/main/java/fun/walawe/local/service/: ChunkHandlerService.kt  LocalDatabaseService.kt  MemoryService.kt  PreprocessTextService.kt
local/src/test/java/fun/walawe/local/: ExampleUnitTest.kt
local/src/test/java/fun/walawe/local/service/: ChunkHandlerServiceTest.kt
mcp/: build.gradle.kts
mcp/src/androidTest/java/fun/walawe/mcp/: CustomTestRunner.kt  ExampleInstrumentedTest.kt  KeenableServiceTest.kt  MockInterceptor.kt
mcp/src/main/java/fun/walawe/mcp/: KeenableService.kt  McpClient.kt
mcp/src/main/java/fun/walawe/mcp/di/: McpModule.kt
mcp/src/test/java/fun/walawe/mcp/: ExampleUnitTest.kt
memelm/: build.gradle.kts
memelm/src/androidTest/java/fun/walawe/memelm/: ExampleInstrumentedTest.kt
memelm/src/main/: AndroidManifest.xml
memelm/src/main/cpp/: BackendProber.cpp  BackendProber.h  CMakeLists.txt  EmbeddingEngine.cpp  EmbeddingEngine.h  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  logging.h  memelm.cpp
memelm/src/main/java/fun/walawe/memelm/: HardwareAccelerationChecker.kt  InferenceEngine.kt  MemeLM.kt  MemeLMModule.kt
memelm/src/main/java/fun/walawe/memelm/gguf/: GGUFReader.kt
memelm/src/main/java/fun/walawe/memelm/inference/: EmbeddingEngine.kt  EmbeddingEngineImpl.kt  InferenceEngine.kt  InferenceEngineImpl.kt
memelm/src/test/java/fun/walawe/memelm/: ExampleUnitTest.kt
modelpull/: README.md  build.gradle.kts
modelpull/src/androidTest/java/fun/walawe/modelpull/: CustomTestRunner.kt  ExampleInstrumentedTest.kt  LocalModelDownloaderTest.kt  TestNetworkModule.kt
modelpull/src/main/java/fun/walawe/modelpull/: ModelDownloader.kt  NetworkModule.kt  WorkerModule.kt
modelpull/src/main/java/fun/walawe/modelpull/api/: WalaweAPIClient.kt
modelpull/src/main/java/fun/walawe/modelpull/model/: ApiException.kt  CacheModel.kt  CachePaligemmaModel.kt  DefaultModelSpecification.kt  DownloadTarget.kt  ModelCache.kt  ModelCacheModule.kt
modelpull/src/main/java/fun/walawe/modelpull/service/: ModelDownloader.kt
modelpull/src/test/java/fun/walawe/modelpull/: ExampleUnitTest.kt  NoUnitTestUseInstrumentedTestInstead.kt
stt/: build.gradle.kts
stt/src/main/: AndroidManifest.xml
stt/src/main/cpp/: CMakeLists.txt
tts/: build.gradle.kts
vector/: RAG.md  build.gradle.kts
vector/src/androidTest/java/io/github/antinormies/vector/: ExampleInstrumentedTest.kt
vector/src/main/cpp/: CMakeLists.txt  vector.cpp
vector/src/main/java/fun/walawe/vector/: NativeLib.kt  VectorStore.kt
vector/src/main/java/io/github/antinormies/vector/: NativeLib.kt
vector/src/test/java/io/github/antinormies/vector/: ExampleUnitTest.kt
whatsnew/: en-US
whatsnew/play/listing/en-US/: full-description.txt  short-description.txt
(+8 files in other folders)
